@@ -1,1 +1,0 @@
-./diacanvas2/src Dia diacanvas2
